# slick-ml

./: .coveragerc  .flake8  .gitignore  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml  setup.cfg  setup.py  tox.ini  travis.yml
.github/: PULL_REQUEST_TEMPLATE.md  codecov.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  improve_documentation.yml
.github/workflows/: cd.yml  ci.yaml  ci.yml  metrics.yml
assets/data/: reg_data.csv
assets/designs/: banner.txt
assets/papers/joss2021/: paper.md
data/: dummy_data.csv  hypertensive_patients_clf.csv
docs/: conf.py  index.rst
docs/_static/css/: custom.css
docs/pages/: api.rst  citation.md  citation.rst  code_of_conduct.md  contact_us.md  contributing.md  contributing.rst  examples.md  installation.md  installation.rst  license.md  license.rst  need_help.rst  quick_start.md  quick_start.rst
examples/: classification.ipynb  clustering.ipynb  feature_engineering.ipynb  feature_selection.ipynb  metrics.ipynb  optimization.ipynb  regression.ipynb  test_metrics.ipynb  utilities.ipynb
examples/classification/: example_01_XGBoostClassifier.ipynb  example_02_XGBoostCVClassifier.ipynb  example_03_GLMNetCVClassifier.ipynb
examples/feature_engineering/: example_01_noisy_features.ipynb  feature_engineering.ipynb
examples/feature_selection/: example_01_XGBoostFeatureSelector.ipynb  feature_selection.ipynb
examples/metrics/: example_01_BinaryClassificationMetrics.ipynb  example_02_RegressionMetrics.ipynb  metrics.ipynb
examples/optimization/: example_01_XGBoostClassifierBayesianOpt.ipynb  example_02_XGBoostClassifierHyperOpt.ipynb  example_03_XGBoostRegressorBayesianOpt.ipynb  example_04_XGBoostRegressorrHyperOpt.ipynb  optimization.ipynb
examples/quick-starts/classification/: GLMNetCVClassifier.ipynb  XGBoostCVClassifier.ipynb  XGBoostClassifier.ipynb
examples/quick-starts/metrics/: BinaryClassificationMetrics.ipynb  RegressionMetrics.ipynb
examples/quick-starts/optimization/: XGBoostBayesianOptimizer.ipynb  XGBoostClassifierBayesianOpt.ipynb  XGBoostClassifierHyperOpt.ipynb  XGBoostHyperOptimizer.ipynb  XGBoostRegressorrHyperOpt.ipynb
examples/quick-starts/regression/: GLMNetCVRegressor.ipynb  XGBoostCVRegressor.ipynb  XGBoostRegressor.ipynb
examples/quick-starts/selection/: XGBoostFeatureSelector.ipynb
examples/quick-starts/utils/: add_noisy_features.ipynb  array_to_df.ipynb  check_var.ipynb  df_to_csr.ipynb  memory_use_csr.ipynb
examples/regression/: example_01_XGBoostRegressor.ipynb  example_02_XGBoostCVRegressor.ipynb  example_03_GLMNetCVRegressor.ipynb
examples/sagemaker/: README.md  main.ipynb  pyproject.toml
examples/sagemaker/src/: main.py
examples/sagemaker/src/sagemaker/: pipelines.py  steps.py  utils.py
examples/utilities/: utilities.ipynb
landing/: index.html
paper/: paper.bib  paper.md
slickml/: backmetrics.py  classification.py  feature_engineering.py  feature_selection.py  formatting.py  metrics.py  optimization.py  plotting.py  regression.py  utilities.py
src/slickml/: __init__.py  _dummy.py  classification.py  feature_engineering.py  feature_selection.py  metrics.py  plotting.py  py.typed  regression.py  utilities.py
src/slickml/base/: __init__.py  _classifier.py  _enum.py  _estimator.py  _metrics.py  _regressor.py
src/slickml/classification/: __init__.py  _glmnet.py  _todo.py  _xgboost.py  _xgboostcv.py
src/slickml/cli/: __init__.py  _cli.py
src/slickml/metrics/: __init__.py  _base.py  _classification.py  _regression.py  _todo.py
src/slickml/optimization/: __init__.py  _bayesianopt.py  _hyperopt.py  _todo.py
src/slickml/regression/: __init__.py  _glmnet.py  _todo.py  _xgboost.py  _xgboostcv.py
src/slickml/selection/: __init__.py  _todo.py  _xgboost.py
src/slickml/utils/: __init__.py  _annotations.py  _base.py  _format.py  _todo.py  _todo_fmt.py  _transform.py  _validation.py
src/slickml/visualization/: __init__.py  _glmnet.py  _metrics.py  _selection.py  _shap.py  _todo_plotting.py  _xgboost.py
tests/: classification_test.py  conftest.py  feature_engineering_test.py  feature_selection_test.py  metrics_test.py  plotting_test.py  test_dummy.py  test_imports.py  utilities_test.py  utils.py
tests/slickml/: test_coverage_gaps.py
tests/slickml/base/: test_enum.py  test_estimator.py
tests/slickml/classification/: test_glmnet.py  test_xgboost.py  test_xgboostcv.py
tests/slickml/cli/: test_cli.py
tests/slickml/imports/: test_imports.py
tests/slickml/metrics/: test_binary_classification_metrics.py  test_regression_metrics.py
tests/slickml/optimization/: test_xgboost_bayesianopt.py  test_xgboost_hyperopt.py
tests/slickml/regression/: test_glmnet.py  test_xgboost.py  test_xgboostcv.py
tests/slickml/selection/: test_xgboost.py
tests/slickml/utils/: test_annotations.py  test_base.py  test_format.py  test_transform.py  test_validation.py
