####################################################################################################
####### PLEASE READ THE CONTRIBUTING DOCUMENT FIRST BEFORE APPLYING ANY CHANGES TO THIS FILE #######
########################################### SLICKML TEAM ###########################################
####################################################################################################

[tool.poetry]
name = "slickml"
version = "0.2.1"
description = "SlickML: Slick Machine Learning in Python"
license = "MIT"
authors = [
    "Amirhessam Tahmassebi <admin@slickml.com>",
]
maintainers = [
    "Amirhessam Tahmassebi <admin@slickml.com>",
]
readme = "README.md"
homepage = "https://www.slickml.com"
repository = "https://github.com/slickml/slick-ml"
documentation = "https://www.docs.slickml.com"
keywords = [
    "python",
    "data-science",
    "machine-learning",
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
packages = [
    { include = "slickml", from = "src" },
]
include = ["src/slickml", "*.md"]
exclude = [
    "docs",
    "assets",
    "tests",
    "examples",
]


[tool.poetry.dependencies]
python = ">=3.8,<3.11"

# --- scientific-computing ---
# TODO(amir): since numpy "^1.23" distutils is deprecated which glmnet needs it
# wait for `glmnet` for a new release; then upgrade this 
numpy = "^1.22,<1.23"
pandas = "^1.5"
scipy = "^1.9"
statsmodels = "^0.13"

# --- machine-learning ---
scikit-learn = "^1.1"
xgboost = "^1.7"
glmnet = "^2.2"
shap = "^0.41"

# --- optimization ----
bayesian-optimization = "^1.2"
hyperopt = "^0.2"

# --- visualization ---
# TODO(amir): matplotlib v>=3.6 comes with breaking changes
# make sure to apply the upgrade and fix the issues once the API refactor is done
matplotlib = "^3.5,<3.6"
seaborn = "^0.12"

# --- command-lines ---
click = "^8.1"


[tool.poetry.group.dev.dependencies]

# --- package-management ---
pip = "^22.3"

# --- task-management ---
poethepoet = "^0.16"

# --- testenv-management ---
tox = "^3.28"

# --- formatting ---
add-trailing-comma = "^2.4"
isort = "^5.11"
black = "^22.12"
jupyter-black = "^0.3"

# --- linting ---
flake8 = "^5.0"
flake8-commas = "^2.1"
flake8-annotations = "^2.9"
flake8-comprehensions = "^3.10"
flake8-eradicate = "^1.4"
flake8-simplify = "^0.19"
flake8-tidy-imports = "^4.8"
flake8-type-checking = "^2.3"
flake8-typing-imports = "^1.12"
flake8-use-fstring = "^1.4"
pep8-naming = "^0.13"

# --- type-checking ---
mypy = "^0.991"
pandas-stubs = "^1.5"
data-science-types = "^0.2"

# --- unit-testing ---
pytest = "^7.2"
pytest-cov = "^4.0"
pytest-mock = "^3.10"
mock = "^4.0"
coverage = "^6.5"
assertpy = "^1.1"

# --- docs ----
sphinx = "^5.3"
sphinx-autoapi = "^1.9"
sphinx_design = "^0.3"
myst-parser = "^0.18"
furo = "^2022.9"

# --- jupyter ---
ipykernel = "^6.20"
jupytext = "^1.14"

# --- monitoring ---
watchdog = "^2.1"

# --- image manipulation ---
pillow = "^9.3.0"

[build-system]
requires = ["poetry-core>=1.4.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
slickml = "slickml.cli:cli"

# -- try `poe --help` for options
[tool.poe.tasks]
greet = { cmd = """echo "Welcome to SlickML ♡♡♡ $USER ♡♡♡ ...\n\n \
███████╗██╗     ██╗ ██████╗██╗  ██╗███╗   ███╗██╗     
██╔════╝██║     ██║██╔════╝██║ ██╔╝████╗ ████║██║     
███████╗██║     ██║██║     █████╔╝ ██╔████╔██║██║     
╚════██║██║     ██║██║     ██╔═██╗ ██║╚██╔╝██║██║     
███████║███████╗██║╚██████╗██║  ██╗██║ ╚═╝ ██║███████╗
╚══════╝╚══════╝╚═╝ ╚═════╝╚═╝  ╚═╝╚═╝     ╚═╝╚══════╝\
" """, help = "Runtime user greetings" }
clean = { cmd = "rm -rf .coverage dist/ .mypy_cache/ .pytest_cache/ .tox/ htmlcov/ xmlcov/ **/__pycache__/ **/.ipynb_checkpoints/", help = "Remove all the ignored directories/files" }
add-trailing-comma = { cmd = "poetry run add-trailing-comma --exit-zero-even-if-changed src/**/*.py tests/**/*.py", help = "Format code style via add-trailing-comma" }
black = { cmd = "poetry run black --line-length 100 .", help = "Format code style via black" }
isort = { cmd = "poetry run isort --profile black .", help = "Sort imported libraries via isort" }
flake8 = { cmd = "poetry run flake8 --verbose --benchmark --color always --config .flake8", help = "Lint code via flake8" }
mypy = { cmd = "poetry run mypy --config-file mypy.ini", help = "Lint types via mypy" }
test = { cmd = "poetry run python -m pytest --cov=src --cov-report=term --cov-report=html --cov-report=xml --cov-config=.coveragerc --tb=short -ra -v", help = "Run unit-tests via pytest" }
sphinx = { cmd = "poetry run sphinx-build -b html docs/ docs/_build", help = "Build API docs via sphinx" }
tox = { cmd = "poetry run tox -c tox.ini .", help = "Test environments via tox" }
format = [
    { ref = "greet" },
    { ref = "add-trailing-comma" },
    { ref = "isort" },
    { ref = "black" },
]
check = [
    { ref = "greet" },
    { cmd = "poe black --check" },
    { cmd = "poe isort --check-only" },
    { cmd = "poe flake8 ." },
    { cmd = "poe mypy ." },
]
