####################################################################################################
####### PLEASE READ THE CONTRIBUTING DOCUMENT FIRST BEFORE APPLYING ANY CHANGES TO THIS FILE #######
########################################### SLICKML TEAM ###########################################
####################################################################################################

[project]
name = "slickml"
version = "0.4.0"
description = "SlickML: Slick Machine Learning in Python"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Amirhessam Tahmassebi", email = "admin@slickml.com" },
]
maintainers = [
    { name = "Amirhessam Tahmassebi", email = "admin@slickml.com" },
]
requires-python = ">=3.9,<3.13"
keywords = [
    "python",
    "data-science",
    "machine-learning",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    # --- scientific-computing ---
    "numpy>=1.22,<2.0",
    "pandas>=1.4,<2.0",
    "scipy>=1.9",
    "statsmodels>=0.13",
    # --- machine-learning ---
    "scikit-learn>=1.5",
    "xgboost>=1.7,<2.0",
    "python-glmnet>=2.2",
    "shap>=0.46",
    # --- optimization ---
    "bayesian-optimization>=1.2,<2.0",
    "hyperopt>=0.2",
    # --- visualization ---
    "matplotlib>=3.5",
    "seaborn>=0.12",
    # --- command-lines ---
    "click>=8.1",
    # --- packaging (pkg_resources used by some ML deps; removed in setuptools 82+) ---
    "setuptools>=70.3,<82",
]

[project.optional-dependencies]
dev = [
    "assertpy>=1.1",
    "coverage>=6.5",
    "ipykernel>=6.29",
    "jupytext>=1.14",
    "mock>=4.0",
    "mypy>=1.8",
    "pandas-stubs>=1.5",
    "pillow>=9.3",
    "poethepoet>=0.32",
    "pytest>=7.2",
    "pytest-cov>=4.0",
    "pytest-mock>=3.10",
    "ruff>=0.6",
    "tox>=4.22",
    "tox-uv>=1.25",
    "watchdog>=2.1",
]
docs = [
    "furo>=2022.9",
    "myst-parser>=0.18",
    "sphinx>=5.3",
    "sphinx-autoapi>=1.9",
    "sphinx-design>=0.3",
]

[project.scripts]
slickml = "slickml.cli:cli"

[project.urls]
Homepage = "https://www.slickml.com"
Repository = "https://github.com/slickml/slick-ml"
Documentation = "https://www.docs.slickml.com/slick-ml/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/slickml"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/assets",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
]
exclude = ["/.gitignore"]

[tool.uv]
default-groups = ["dev"]

[dependency-groups]
dev = [
    "assertpy>=1.1",
    "coverage>=6.5",
    "ipykernel>=6.29",
    "jupytext>=1.14",
    "mock>=4.0",
    "mypy>=1.8",
    "pandas-stubs>=1.5",
    "pillow>=9.3",
    "poethepoet>=0.32",
    "pytest>=7.2",
    "pytest-cov>=4.0",
    "pytest-mock>=3.10",
    "ruff>=0.6",
    "tox>=4.22",
    "tox-uv>=1.25",
    "watchdog>=2.1",
]
docs = [
    "furo>=2022.9",
    "myst-parser>=0.18",
    "sphinx>=5.3",
    "sphinx-autoapi>=1.9",
    "sphinx-design>=0.3",
]


# -- try `poe --help` for options
[tool.poe.tasks]

[tool.poe.tasks.greet]
help = "Runtime user greetings"
cmd = """
echo "Welcome to SlickML ♡♡♡ $USER ♡♡♡ ...\n\n \
███████╗██╗     ██╗ ██████╗██╗  ██╗███╗   ███╗██╗     
██╔════╝██║     ██║██╔════╝██║ ██╔╝████╗ ████║██║     
███████╗██║     ██║██║     █████╔╝ ██╔████╔██║██║     
╚════██║██║     ██║██║     ██╔═██╗ ██║╚██╔╝██║██║     
███████║███████╗██║╚██████╗██║  ██╗██║ ╚═╝ ██║███████╗
╚══════╝╚══════╝╚═╝ ╚═════╝╚═╝  ╚═╝╚═╝     ╚═╝╚══════╝\
" """

[tool.poe.tasks.clean]
help = "Remove ignored caches, coverage, and build artifacts"
cmd = """
    rm -rf .coverage
           .coverage.*
           dist/
           build/
           .mypy_cache/
           .pytest_cache/
           .ruff_cache/
           .tox/
           htmlcov/
           xmlcov/
           **/__pycache__/
           **/.ipynb_checkpoints/
    """

[tool.poe.tasks.mypy]
help = "Lint types via mypy"
cmd = "mypy"

[tool.poe.tasks.sphinx]
help = "Build API docs via sphinx"
cmd = "sphinx-build -b html docs/ docs/_build"

[tool.poe.tasks.format]
help = "Format code via ruff"
cmd = "ruff format ."

[tool.poe.tasks.check]
help = "Check all linting steps."
sequence = [
    "greet",
    { cmd = "poe format --check" },
    { cmd = "ruff check ." },
    { cmd = "poe mypy" },
]

[tool.poe.tasks.test]
help = "Run unit-tests via pytest"
cmd = """
    python -m pytest
        --cov=src
        --cov-report=term
        --cov-report=html
        --cov-report=xml
        --cov-config=.coveragerc
        --tb=short
        -ra
        -v
    """

[tool.poe.tasks.tox]
help = "Run check + test + build across Python versions via tox"
cmd = "tox"

[tool.poe.tasks.build]
help = "Build sdist and wheel via uv"
cmd = "uv build"
